# mipt_lpr_cpplessons_term2

./: CMakeLists.txt  LICENSE  README.md
Adva/week2/: merge_sort.cpp
contest1/: A.cpp  C.cpp  F.cpp
contest2/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
contest3/: B.cpp  C.cpp  D.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
contest4/: A.cpp  B.cpp  E.cpp  H.cpp
contest5/: A.cpp  B.cpp  C.cpp  F.cpp  G.cpp
contests/contest1/: B.cpp  D.cpp  E.cpp
contests/contest2/: C.cpp
contests/contest3/: A.cpp  B.cpp  C.cpp  E.cpp
contests/contest4/: C.cpp  D.cpp  F.cpp  G.cpp
contests/contest5/: C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
contests/contest6/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
contests/control_contest/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  G.cpp  X.cpp  Y.cpp
contests/test_contest/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
lab1/: lab1.ipynb  lab12.ipynb  search.cpp  search.xlsx  search2.txt  search2.xlsx  strategies.cpp  sum_of_two.cpp  sum_of_two.txt  sum_of_two.xlsx
lab1/.ipynb_checkpoints/: lab1-checkpoint.ipynb  lab12-checkpoint.ipynb
lab2/: lab2.ipynb  shaker.cpp  shell.txt  shell.xlsx
lab3/: 1.cpp  1.xlsx  2.txt  2.xlsx  3.cpp  3.txt  3.xlsx  lab3.ipynb
lab3/.ipynb_checkpoints/: lab3-checkpoint.ipynb
labs/lab1/: lab12.ipynb  search.cpp  sum_of_two.cpp  sum_of_two.xlsx
labs/lab2/: comb.cpp  comb.txt  comb.xlsx  shell.cpp
labs/lab3/: 1.cpp  1.txt  2.cpp  2.xlsx  3.xlsx  lab3.ipynb
labs/lab3/.ipynb_checkpoints/: lab3-checkpoint.ipynb
tests/: catch.hpp  infix_notation.cpp  infix_notation.h  infix_test.cpp
week1/: A.cpp  C.cpp  D.cpp  E2.cpp  F.cpp  G.cpp
week2/: C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
week3/: A.cpp  B.cpp  C.cpp
week5/: B.cpp  C.cpp  F.cpp
weeks/week0/: greatest_common_divisor.cpp  prime_test.cpp  quadratic_equation.cpp
weeks/week1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
weeks/week2/: A.cpp  B.cpp  C.cpp  array.cpp
weeks/week5/: A.cpp  D.cpp  E.cpp
