cmake_minimum_required(VERSION 3.24)
project(mipt_lpr_cpplessons_term2)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g3")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g3")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak -fno-omit-frame-pointer -g3")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=leak -fno-omit-frame-pointer -g3")
##set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread -fno-omit-frame-pointer -g3")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined -fno-omit-frame-pointer -g3")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=undefined -fno-omit-frame-pointer -g3")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=memory -fno-omit-frame-pointer -g3")

#add_executable(A0 week0/helloworld.cpp)
#add_executable(B0 week0/quadratic_equation.cpp)
#add_executable(C0 week0/greatest_common_divisor.cpp)
#add_executable(D0 week0/prime_test.cpp)
#
#add_executable(A1 week1/A.cpp)
#add_executable(B1 week1/B.cpp)
#add_executable(C1 week1/C.cpp)
#add_executable(D1 week1/D.cpp)
#add_executable(E1 week1/E.cpp)
#add_executable(E21 week1/E2.cpp)
#add_executable(F1 week1/F.cpp)
#add_executable(G1 week1/G.cpp)

#add_executable(A2 week2/A.cpp)
#add_executable(B2 week2/B.cpp)
#add_executable(C2 week2/C.cpp)
#add_executable(D2 week2/D.cpp)
#add_executable(E2 week2/E.cpp)
#add_executable(F2 week2/F.cpp)
#add_executable(G2 week2/G.cpp)
#add_executable(H2 week2/H.cpp)
#add_executable(array week2/array.cpp)

#add_executable(search lab1/search.cpp)
#add_executable(sum_of_two lab1/sum_of_two.cpp)
#add_executable(strategies lab1/strategies.cpp)

#add_executable(shaker lab2/shaker.cpp)
#add_executable(comb lab2/comb.cpp)
#add_executable(shell lab2/shell.cpp)

#add_executable(A3 week3/A.cpp)
#add_executable(B3 week3/B.cpp)
#add_executable(C3 week3/C.cpp)

#add_executable(A5 week5/A.cpp)
#add_executable(B5 week5/B.cpp)
#add_executable(C5 week5/C.cpp)
#add_executable(D5 week5/D.cpp)
#add_executable(E5 week5/E.cpp)
#add_executable(F5 week5/F.cpp)

#add_executable(A1 contest1/A.cpp)
#add_executable(B1 contest1/B.cpp)
#add_executable(C1 contest1/C.cpp)
#add_executable(D1 contest1/D.cpp)
#add_executable(E1 contest1/E.cpp)
#add_executable(F1 contest1/F.cpp)

#add_executable(A2 contest2/A.cpp)
#add_executable(B2 contest2/B.cpp)
#add_executable(C2 contest2/C.cpp)
#add_executable(D2 contest2/D.cpp)
#add_executable(E2 contest2/E.cpp)
#add_executable(F2 contest2/F.cpp)
#add_executable(G2 contest2/G.cpp)
#add_executable(H2 contest2/H.cpp)

#add_executable(A3 contest3/A.cpp)
#add_executable(B3 contest3/B.cpp)
#add_executable(C3 contest3/C.cpp)
#add_executable(D3 contest3/D.cpp)
#add_executable(E3 contest3/E.cpp)
#add_executable(F3 contest3/F.cpp)
#add_executable(G3 contest3/G.cpp)
#add_executable(H3 contest3/H.cpp)
#add_executable(I3 contest3/I.cpp)
#add_executable(J3 contest3/J.cpp)

#add_executable(1 lab3/1.cpp)
#add_executable(2 lab3/2.cpp)
#add_executable(3 lab3/3.cpp)

#add_executable(A4 contest4/A.cpp)
#add_executable(B4 contest4/B.cpp)
#add_executable(C4 contest4/C.cpp)
#add_executable(D4 contest4/D.cpp)
#add_executable(E4 contest4/E.cpp)
#add_executable(F4 contest4/F.cpp)
#add_executable(G4 contest4/G.cpp)
#add_executable(H4 contest4/H.cpp)

add_executable(A5 contest5/A.cpp)
add_executable(B5 contest5/B.cpp)
add_executable(C5 contest5/C.cpp)
add_executable(D5 contest5/D.cpp)
add_executable(E5 contest5/E.cpp)
add_executable(F5 contest5/F.cpp)
add_executable(G5 contest5/G.cpp)